tests/ui/lang-items/start_lang_item_args.argv_inner_ptr.stderr
error[E0308]: lang item `start` function has wrong type
  --> $DIR/start_lang_item_args.rs:86:52
   |
LL | fn start<T>(_main: fn() -> T, _argc: isize, _argv: *const *const usize, _sigpipe: u8) -> isize {
   |                                                    ^^^^^^^^^^^^^^^^^^^ expected `u8`, found `usize`
   |
   = note: expected signature `fn(fn() -> _, _, *const *const u8, _) -> _`
              found signature `fn(fn() -> _, _, *const *const usize, _) -> _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
